--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -18,14 +18,14 @@ sonar.sources=.
 sonar.cxx.file.suffixes=.hxx, .hpp, .hh, .h, .h++, .ipp, .cxx, .cpp, .cc, .c, .c++, .inl, .py
 
 # The property sonar.language has been dropped completely
-sonar.c.file.suffixes=.disable_sonarcfamily_c
-sonar.cpp.file.suffixes=.disable_sonarcfamily_cpp # use cxx instead of cpp
+#sonar.c.file.suffixes=.disable_sonarcfamily_c
+#sonar.cpp.file.suffixes=.disable_sonarcfamily_cpp # use cxx instead of cpp
 
 # Tell SonarQube where to find the compiler output
 #sonar.cxx.gcc.reportPath=compiler_output.txt
 
 # Tell SonarQube where to find the CppCheck output
-sonar.cxx.cppcheck.reportPaths=cppcheck_report.xml
+#sonar.cxx.cppcheck.reportPaths=cppcheck_report.xml
 
 # Set coverage settings
 # sonar.cxx.coverage.reportPath=coverage_report.xml
