--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,6 +4,7 @@
 sonar.projectKey=key-python-demoapp
 # Defaults to project key
 sonar.projectName=python-demoapp
+sonar.token=sqp_8d01c0fda0bd3f1ffe0588f3fa69125a9cf1485f
 # Defaults to 'not provided', provided at command line argument to get the version based on conanfile.py
 # sonar.projectVersion=0.1
 # Description
@@ -29,7 +30,7 @@ sonar.cxx.file.suffixes=.hxx, .hpp, .hh, .h, .h++, .ipp, .cxx, .cpp, .cc, .c, .c
 
 # Set coverage settings
 # sonar.cxx.coverage.reportPath=coverage_report.xml
-
+sonar.host.url="http://localhost:9008"
 # Disable code coverage until we setup the environment for it
 sonar.coverage.exclusions=**/*.*
 
